--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@ Licensed under the MIT License (view LICENSE.md for more information)
 
 
     <!-- Primary Meta Tags -->
-    <title>GBA Online</title>
-    <meta name="title" content="GBA Online">
-    <meta name="description" content="A free, online, and lightweight GameBoy Advance emulator.">
+    <title>Untitled</title>
+    <meta name="title" content="Ghub Emulator">
+    <meta name="description" content="Gautham's forked version of GBA.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://metatags.io/">
-    <meta property="og:title" content="GBA Online">
-    <meta property="og:description" content="A free, online, and lightweight GameBoy Advance emulator.">
+    <meta property="og:title" content="Ghub Emulator">
+    <meta property="og:description" content="Gautham's forked version of GBA.">
     <meta property="og:image" content="https://raw.githubusercontent.com/ayvacs/gba.js.org/gh-pages/assets/repo-card.png">
 
     <!-- Twitter -->
@@ -52,7 +52,7 @@ Licensed under the MIT License (view LICENSE.md for more information)
     <img id="repo-card" src="assets/logo-small.png" width="682" height="120px" alt="Website header">
     <p id="version-card" style="font-size:20px">v1.4.6</p>
 
-    <p>Easily emulate GameBoy Advance games for free in your browser. Completely open source!</p>
+    <p>My (gautham) forked version of gba.!</p>
 
     <button type="collapsible-button" class="collapsible-collapsible">
         Keybinds
