--- a/player/index.html
+++ b/player/index.html
@@ -10,7 +10,7 @@ Licensed under the MIT License (view LICENSE.md for more information)
 <html>
 
 <head>
-    <title>GBA Online</title>
+    <title>Ghub Emulator</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=160">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
