--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@ Licensed under the MIT License (view LICENSE.md for more information)
 
 <body>
     <div id="particles-js"></div>
-    <!-- Add Particles -->
+    <-- Add Particles -->
 
 
     <br><br><br>
     <img id="repo-card" src="assets/logo-small.png" width="682" height="120px" alt="Website header">
     <p id="version-card" style="font-size:20px">v1.4.6</p>
 
-    <p>My (gautham) forked version of gba.!</p>
+    <p>My (gautham) forked version of gba</p>
+	    <p>This is NOT my own, i forked this and modified it.</p>
 
     <button type="collapsible-button" class="collapsible-collapsible">
         Keybinds
