--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ Licensed under the MIT License (view LICENSE.md for more information)
         </p>
     </div><br>
 
-    <a target="_blank" href="https://github.com/ayvacs/gba.js.org"><button type="collapsible-button" class="collapsible-collapsible">
-        Source Code
+    <a target="_blank" href="https://grade8work.codehs.me"><button type="collapsible-button" class="collapsible-collapsible">
+        Main Website
     </button></a><br><br><hr><br>
 
     <h1>Select a Game</h1>
